<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <EditText android:layout_above="@+id/editTextEmail"
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        tools:ignore="Autofill,LabelFor" />

    <EditText android:layout_above="@+id/editTextPassword"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        tools:ignore="Autofill,LabelFor" />

    <EditText android:layout_centerInParent="true"
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:ignore="Autofill,LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentBottom="true"
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
